# to-hotdog-or-not-to-hotdog

./: .gitignore  README.md  hotdog.ipynb  main.py  pyproject.toml
.history/: README_20250921125558.md
src/: main.py  utils.py
src/models/: dataloader.py  models.py
src/notebooks/: hotdog.ipynb
src/results/: training_history.csv
src/visualizations/: __init__.py  class_imbalance.py  saliency_maps.py  training_plots.py
